force-app/main/default/objects/Int_Batch_Exception_Log__c/Int_Batch_Exception_Log__c.object-meta.xml
<CustomObject>
    <label>Int Batch Exception Log</label>
    <nameField>
        <label>Int Batch Exception Log	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Int Batch Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>