force-app/main/default/objects/Int_Batch_Exception_Log__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>