force-app/main/default/objects/Int_Batch_Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception__c</columns>
    <columns>Execution_Type__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>